--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@connext/vector-contracts": "^0.2.0-beta.9",
     "@statechannels/nitro-protocol": "^0.16.0",
     "chalk": "^4.1.0",
     "ethers": "^5.0.31",
