--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "go": "ts-node nitro-happy-case.ts"
+    "go-nitro": "ts-node nitro-happy-case.ts",
+    "go-vector": "ts-node vector-happy-case.ts"
   }
 }
