--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "private": true,
   "dependencies": {
     "@connext/vector-contracts": "^0.2.0-beta.9",
+    "@connext/vector-protocol": "^0.2.0-beta.9",
+    "@connext/vector-types": "^0.2.0-beta.9",
+    "@connext/vector-utils": "^0.2.0-beta.9",
     "@statechannels/nitro-protocol": "^0.16.0",
     "chalk": "^4.1.0",
     "ethers": "^5.0.31",
