add go-ninja to GH action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,6 @@ jobs:
       - run: yarn install
       - run: yarn go-vector
       - run: yarn go-nitro
+      - run: yarn go-ninja
       - run: yarn dispute-nitro
       - run: yarn dispute-vector
