--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@connext/vector-contracts": "^0.2.0-beta.9",
-    "@connext/vector-protocol": "^0.2.0-beta.9",
-    "@connext/vector-types": "^0.2.0-beta.9",
-    "@connext/vector-utils": "^0.2.0-beta.9",
+    "@connext/vector-contracts": "^0.2.5-alpha.2",
+    "@connext/vector-protocol": "^0.2.5-alpha.2",
+    "@connext/vector-types": "^0.2.5-alpha.2",
+    "@connext/vector-utils": "^0.2.5-alpha.2",
     "@statechannels/nitro-protocol": "^0.17.0",
     "chalk": "^4.1.0",
     "ethers": "^5.0.31",
@@ -20,6 +20,8 @@
   },
   "scripts": {
     "go-nitro": "ts-node ./nitro-atomic-swap/happy-case.ts",
-    "go-vector": "ts-node ./vector-atomic-swap/happy-case.ts"
+    "go-vector": "ts-node ./vector-atomic-swap/happy-case.ts",
+    "vector-dispute": "ts-node ./vector-atomic-swap/dispute.ts"
+
   }
 }
