--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "go-vector": "ts-node ./vector-atomic-swap/happy-case.ts",
     "dispute-nitro": "ts-node ./nitro-atomic-swap/dispute.ts",
     "dispute-vector": "ts-node ./vector-atomic-swap/dispute.ts"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
