--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "cross-chain",
-  "version": "0.0.0",
-  "description": "Cross chain transfers using Nitro protocol",
-  "main": "index.ts",
-  "author": "geoknee <georgeknee@googlemail.com>",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "@connext/vector-contracts": "^0.2.5-alpha.2",
-    "@connext/vector-protocol": "^0.2.5-alpha.2",
-    "@connext/vector-types": "^0.2.5-alpha.2",
-    "@connext/vector-utils": "^0.2.5-alpha.2",
-    "@statechannels/nitro-protocol": "^0.17.0",
-    "chalk": "^4.1.0",
-    "ethers": "^5.0.31",
-    "ganache-core": "2.13.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
-  },
-  "scripts": {
-    "go-nitro": "ts-node ./nitro-atomic-swap/happy-case.ts",
-    "go-vector": "ts-node ./vector-atomic-swap/happy-case.ts",
-    "dispute-nitro": "ts-node ./nitro-atomic-swap/dispute.ts",
-    "dispute-vector": "ts-node ./vector-atomic-swap/dispute.ts",
-    "prettier:write": "prettier --write './**/*.ts'"
-  },
-  "devDependencies": {
-    "prettier": "^2.2.1"
-  }
+    "name": "cross-chain",
+    "version": "0.0.0",
+    "description": "Cross chain transfers using Nitro protocol",
+    "main": "index.ts",
+    "author": "geoknee <georgeknee@googlemail.com>",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+        "@connext/vector-contracts": "^0.2.5-alpha.2",
+        "@connext/vector-protocol": "^0.2.5-alpha.2",
+        "@connext/vector-types": "^0.2.5-alpha.2",
+        "@connext/vector-utils": "^0.2.5-alpha.2",
+        "@statechannels/nitro-protocol": "^0.17.0",
+        "chalk": "^4.1.0",
+        "ethers": "^5.0.31",
+        "ganache-core": "2.13.1",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.2.3"
+    },
+    "scripts": {
+        "go-nitro": "ts-node ./nitro-atomic-swap/happy-case.ts",
+        "go-vector": "ts-node ./vector-atomic-swap/happy-case.ts",
+        "dispute-nitro": "ts-node ./nitro-atomic-swap/dispute.ts",
+        "dispute-vector": "ts-node ./vector-atomic-swap/dispute.ts",
+        "prettier:check": "prettier --check './**/*.ts'",
+        "prettier:write": "prettier --write './**/*.ts'"
+    },
+    "devDependencies": {
+        "prettier": "^2.2.1"
+    }
 }
